Traductions Export a track

--- a/assets/languages/de.json
+++ b/assets/languages/de.json
@@ -1,1 +1,70 @@
-{}
+{
+  "Email": "E-Mail",
+  "Password": "Passwort",
+  "Enter": "Eingeben",
+  "Who are we ?": "Wer sind wir ?",
+  "We are five students from the HES-SO in Sierre. As part of our project course, we are asked to make a mobile application for SanTour, a company that harvests course data made by its trackers. The administration part of the application is managed from this web platform.": "Wir sind fünf Studenten von der HES-SO in Sierre. Im Rahmen unseres Projektkurses werden wir gebeten, eine mobile Anwendung für SanTour zu erstellen, ein Unternehmen, das Track-Daten von seinen Trackern sammelt. Der Verwaltungsteil der Anwendung wird von dieser Web-Plattform verwaltet.",
+  "Languages": "Sprachen",
+  "German": "Deutsch",
+  "English": "Englisch",
+  "French": "Französisch",
+  "List of users": "Liste der Benutzer",
+  "Add an user": "Fügen Sie einen Benutzer hinzu",
+  "Name": "Name",
+  "Role": "Rolle",
+  "Mail address": "E-Mail Adresse",
+  "Actions": "Lager",
+  "Edit": "Bearbeiten",
+  "Delete": "Entfernen",
+  "Delete the user": "Löschen des Benutzers",
+  "Do you really want to delete this user ?": "Möchten Sie diesen Benutzer wirklich löschen ?",
+  "Confirm": "Bestätigen",
+  "Cancel": "Stornieren",
+  "Tracks": "Kurs",
+  "Categories": "Kategorie",
+  "Users": "Benutzer",
+  "Logout": "Trennen",
+  "Navigation": "Navigation",
+  "List of tracks": "Liste der Kurse",
+  "Type": "Typ",
+  "Tracker": "Wanderer",
+  "Distance": "Entfernung",
+  "Duration": "Dauer",
+  "Details": "Details",
+  "Delete the track": "Löschen Sie einen Kurs",
+  "Do you really want to delete this track ?": "Möchten Sie diesen Kurs wirklich löschen ?",
+  "seconds": "Sekunden",
+  "Details about the track : ": "Details eines Kurses : ",
+  "Export the track": "Exportieren einen Kurs",
+  "Legend": "Legende",
+  "minutes": "Minuten",
+  "Description": "Beschreibung",
+  "Points of danger": "Gefahrenpunkte",
+  "Points of interest": "Punkte von Interesse",
+  "Date": "Datum",
+  "Latitude": "Breite",
+  "Longitude": "Länge",
+  "Altitude": "Höhe",
+  "Value": "Wert",
+  "List of categories": "Kategorieliste",
+  "Name of the category": "Kategoriename",
+  "Add a new category": "Kategorie hinzufügen",
+  "Edit the category": "Kategorie bearbeiten",
+  "New category name": "Neuer Kategoriename",
+  "Update": "Aktualisieren",
+  "Delete the category": "Kategorie löschen",
+  "Do you really want to delete this category ?": "Möchten Sie diese Kategorie wirklich löschen?",
+  "Category successfully added !": "Kategorie wurde erfolgreich hinzugefügt !",
+  "Category successfully updated !": "Kategorie wurde erfolgreich aktualisiert !",
+  "Category successfully deleted !": "Kategorie wurde erfolgreich gelöscht !",
+  "Add a new user": "Fügen Sie einen Benutzer hinzu",
+  "Return to the list of users": "Zurück zur Liste der Benutzer",
+  "Username": "Spitzname",
+  "Password confirmation": "Passwortbestätigung",
+  "Add": "Hinzufügen",
+  "This username or this e-mail address already exists !": "Dieser Benutzername oder diese E-Mail-Adresse ist bereits vorhanden !",
+  "The password and its confirmation have to match !": "Das Passwort und seine Bestätigung müssen übereinstimmen !",
+  "The length of the password must be at least of 6 characters !": "Die Länge des Passwortes muss mindestens 6 Zeichen betragen !",
+  "Edit the user": "Benutzer bearbeiten",
+  "Change the password": "Passwort ändern"
+}
