--- a/assets/languages/en.json
+++ b/assets/languages/en.json
@@ -1,1 +1,70 @@
-{}
+{
+  "Email": "E-Mail",
+  "Password": "Password",
+  "Enter": "Enter",
+  "Who are we ?": "Who are we ?",
+  "We are five students from the HES-SO in Sierre. As part of our project course, we are asked to make a mobile application for SanTour, a company that harvests course data made by its trackers. The administration part of the application is managed from this web platform.": "We are five students from the HES-SO in Sierre. As part of our project course, we are asked to make a mobile application for SanTour, a company that harvests course data made by its trackers. The administration part of the application is managed from this web platform.",
+  "Languages": "Languages",
+  "German": "German",
+  "English": "English",
+  "French": "French",
+  "List of users": "List of users",
+  "Add an user": "Add an user",
+  "Name": "Name",
+  "Role": "Role",
+  "Mail address": "Mail address",
+  "Actions": "Actions",
+  "Edit": "Edit",
+  "Delete": "Delete",
+  "Delete the user": "Delete the user",
+  "Do you really want to delete this user ?": "Do you really want to delete this user ?",
+  "Confirm": "Confirm",
+  "Cancel": "Cancel",
+  "Tracks": "Tracks",
+  "Categories": "Categories",
+  "Users": "Users",
+  "Logout": "Logout",
+  "Navigation": "Navigation",
+  "List of tracks": "List of tracks",
+  "Type": "Type",
+  "Tracker": "Tracker",
+  "Distance": "Distance",
+  "Duration": "Duration",
+  "Details": "Details",
+  "Delete the track": "Delete the track",
+  "Do you really want to delete this track ?": "Do you really want to delete this track ?",
+  "seconds": "seconds",
+  "Details about the track : ": "Details about the track : ",
+  "Export the track": "Export the track",
+  "Legend": "Legend",
+  "minutes": "minutes",
+  "Description": "Description",
+  "Points of danger": "Points of danger",
+  "Points of interest": "Points of interest",
+  "Date": "Date",
+  "Latitude": "Latitude",
+  "Longitude": "Longitude",
+  "Altitude": "Altitude",
+  "Value": "Value",
+  "List of categories": "List of categories",
+  "Name of the category": "Name of the category",
+  "Add a new category": "Add a new category",
+  "Edit the category": "Edit the category",
+  "New category name": "New category name",
+  "Update": "Update",
+  "Delete the category": "Delete the category",
+  "Do you really want to delete this category ?": "Do you really want to delete this category ?",
+  "Category successfully added !": "Category successfully added !",
+  "Category successfully updated !": "Category successfully updated !",
+  "Category successfully deleted !": "Category successfully deleted !",
+  "Add a new user": "Add a new user",
+  "Return to the list of users": "Return to the list of users",
+  "Username": "Username",
+  "Password confirmation": "Password confirmation",
+  "Add": "Add",
+  "This username or this e-mail address already exists !": "This username or this e-mail address already exists !",
+  "The password and its confirmation have to match !": "The password and its confirmation have to match !",
+  "The length of the password must be at least of 6 characters !": "The length of the password must be at least of 6 characters !",
+  "Edit the user": "Edit the user",
+  "Change the password": "Change the password"
+}
