--- a/assets/languages/fr.json
+++ b/assets/languages/fr.json
@@ -1,1 +1,70 @@
-{}
+{
+  "Email": "E-Mail",
+  "Password": "Mot de passe",
+  "Enter": "Entrer",
+  "Who are we ?": "Qui sommes-nous ?",
+  "We are five students from the HES-SO in Sierre. As part of our project course, we are asked to make a mobile application for SanTour, a company that harvests course data made by its trackers. The administration part of the application is managed from this web platform.": "Nous sommes cinq étudiants de la HES-SO à Sierre. Dans le cadre de notre cours de projet, il nous est demandé de réaliser une application mobile pour SanTour, une entreprise qui récolte des données de parcours réalisées par ses trackers. La partie administration de l'application est gérée depuis cette plateforme web.",
+  "Languages": "Langues",
+  "German": "Allemand",
+  "English": "Anglais",
+  "French": "Français",
+  "List of users": "Liste des utilisateurs",
+  "Add an user": "Ajouter un utilisateur",
+  "Name": "Nom",
+  "Role": "Rôle",
+  "Mail address": "Adresse e-mail",
+  "Actions": "Actions",
+  "Edit": "Editer",
+  "Delete": "Supprimer",
+  "Delete the user": "Suppression de l'utilisateur",
+  "Do you really want to delete this user ?": "Voulez-vous vraiment supprimer cet utilisateur ?",
+  "Confirm": "Confirmer",
+  "Cancel": "Annuler",
+  "Tracks": "Parcours",
+  "Categories": "Catégories",
+  "Users": "Utilisateurs",
+  "Logout": "Se déconnecter",
+  "Navigation": "Navigation",
+  "List of tracks": "Liste des parcours",
+  "Type": "Type",
+  "Tracker": "Promeneur",
+  "Distance": "Distance",
+  "Duration": "Durée",
+  "Details": "Détails",
+  "Delete the track": "Supprimer un parcours",
+  "Do you really want to delete this track ?": "Voulez-vous vraiment supprimer ce parcours ?",
+  "seconds": "secondes",
+  "Details about the track : ": "Détails d'un parcours : ",
+  "Export the track": "Exporter un parcours",
+  "Legend": "Légende",
+  "minutes": "minutes",
+  "Description": "Description",
+  "Points of danger": "Points de danger",
+  "Points of interest": "Points d'intérêt",
+  "Date": "Date",
+  "Latitude": "Latitude",
+  "Longitude": "Longitude",
+  "Altitude": "Altitude",
+  "Value": "Valeur",
+  "List of categories": "Liste des catégories",
+  "Name of the category": "Nom de la catégorie",
+  "Add a new category": "Ajouter une catégorie",
+  "Edit the category": "Modifier la catégorie",
+  "New category name": "Nouveau nom de la catégorie",
+  "Update": "Mettre à jour",
+  "Delete the category": "Supprimer la catégorie",
+  "Do you really want to delete this category ?": "Voulez-vous vraiment supprimer cette catégorie ?",
+  "Category successfully added !": "Catégorie ajoutée avec succès !",
+  "Category successfully updated !": "Catégorie mise à jour avec succès !",
+  "Category successfully deleted !": "Catégorie supprimée avec succès !",
+  "Add a new user": "Ajouter un utilisateur",
+  "Return to the list of users": "Revenir à la liste des utilisateurs",
+  "Username": "Pseudo",
+  "Password confirmation": "Confirmation de mot de passe",
+  "Add": "Ajouter",
+  "This username or this e-mail address already exists !": "Ce pseudo ou cette adresse e-mail existent déjà !",
+  "The password and its confirmation have to match !": "Le mot de passe et sa confirmation doivent correspondre !",
+  "The length of the password must be at least of 6 characters !": "La longueur du mot de passe doit être d'au moins 6 caractères !",
+  "Edit the user": "Modifier l'utilisateur",
+  "Change the password": "Changer de mot de passe"
+}
