--- a/assets/languages/fr.json
+++ b/assets/languages/fr.json
@@ -9,7 +9,7 @@
   "English": "Anglais",
   "French": "Français",
   "List of users": "Liste des utilisateurs",
-  "Add an user": "Ajouter un utilisateur",
+  "Add a user": "Ajouter un utilisateur",
   "Name": "Nom",
   "Role": "Rôle",
   "Mail address": "Adresse e-mail",
@@ -69,5 +69,6 @@
   "Change the password": "Changer de mot de passe",
   "The e-mail address or the password are incorrect !": "L'adresse e-mail ou le mot de passe sont incorrects !",
   "No POD for this track": "Aucun POD pour ce parcours",
-  "No POI for this track": "Aucun POI pour ce parcours"
+  "No POI for this track": "Aucun POI pour ce parcours",
+  "Track successfully deleted !": "Parcours supprimé avec succès !"
 }
