--- a/assets/languages/de.json
+++ b/assets/languages/de.json
@@ -39,7 +39,7 @@
   "Legend": "Legende",
   "minutes": "Minuten",
   "Description": "Beschreibung",
-  "Points of danger": "Gefahrenpunkte",
+  "Points of difficulty": "Knackpunkte",
   "Points of interest": "Punkte von Interesse",
   "Date": "Datum",
   "Latitude": "Breite",
