--- a/assets/languages/en.json
+++ b/assets/languages/en.json
@@ -39,7 +39,7 @@
   "Legend": "Legend",
   "minutes": "minutes",
   "Description": "Description",
-  "Points of danger": "Points of danger",
+  "Points of difficulty": "Points of difficulty",
   "Points of interest": "Points of interest",
   "Date": "Date",
   "Latitude": "Latitude",
