--- a/assets/languages/fr.json
+++ b/assets/languages/fr.json
@@ -39,7 +39,7 @@
   "Legend": "Légende",
   "minutes": "minutes",
   "Description": "Description",
-  "Points of danger": "Points de danger",
+  "Points of difficulty": "Points de difficulté",
   "Points of interest": "Points d'intérêt",
   "Date": "Date",
   "Latitude": "Latitude",
